Describe the Java 25 build
The README and the build and architecture documents now state Java 25,
GraalVM 25, the native build tools plugin and the single macOS
executable for Apple Silicon.